--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -48,7 +48,7 @@
                 </table>
             </div>
             <div class="tab-pane fade" id="tabusers">
-                <table class="table table-hover">
+                <table class="table table-striped table-hover">
                     <thead>
                     <tr>
                         <th class="col-md-1">Last name</th>
@@ -71,21 +71,22 @@
                         <td th:text="${#strings.setJoin(user.roles, ', ')}"></td>
                         <td>
                             <!--<form th:action="@{/users/{id}(id=${user.id})}" th:method="put">-->
-                                <p data-placement="top" data-toggle="tooltip" title="Edit">
-                                    <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
-                                            data-target="#editUser"><span class="glyphicon glyphicon-pencil"></span>
-                                    </button>
-                                </p>
+                            <p data-placement="top" data-toggle="tooltip" title="Edit">
+                                <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
+                                        data-target="#editUser"><span class="glyphicon glyphicon-pencil"></span>
+                                </button>
+                            </p>
                             <!--</form>-->
                         </td>
-                        <td>
-                            <form th:action="@{/users/{id}(id=${user.id})}" th:method="delete">
-                                <p data-placement="top" data-toggle="tooltip" title="Delete">
-                                    <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
-                                            data-target="#delete"><span class="glyphicon glyphicon-trash"></span>
-                                    </button>
-                                </p>
-                            </form>
+                        <td th:id="${user.id}">
+                            <!--<form th:action="@{/users/{id}(id=${user.id})}" th:method="delete">-->
+                            <p data-placement="top" data-toggle="tooltip" title="Delete">
+                                <button class="btn btn-danger btn-xs delete-user" data-title="Delete"
+                                        data-toggle="modal"
+                                        data-target="#delete"><span class="glyphicon glyphicon-trash"></span>
+                                </button>
+                            </p>
+                            <!--</form>-->
                         </td>
                     </tr>
                     </tbody>
@@ -167,7 +168,8 @@
                             <label for="name" class="control-label col-xs-3">First name</label>
 
                             <div class="col-xs-9">
-                                <input type="text" th:value = "${someVariable}" placeholder="First name" id="name" name="name"
+                                <input type="text" th:value="${someVariable}" placeholder="First name" id="name"
+                                       name="name"
                                        class="form-control" data-minlength="3" required/>
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 <div class="help-block">Minimum of 3 characters</div>
@@ -261,6 +263,50 @@
         <script src="/js/validator.min.js"></script>
     </div>
 
+    <!-- --------------------------------------------------------------------------------------- -->
+    <!-- ---------------------------          DELETE          ---------------------------------- -->
+    <!-- --------------------------------------------------------------------------------------- -->
+    <script type="application/javascript">
+        /* ============================================================ */
+        /* http://stepansuvorov.com/blog/2014/04/jquery-put-and-delete/ */
+        /* ============================================================ */
+        jQuery.each( [ "put", "delete" ], function( i, method ) {
+            jQuery[ method ] = function( url, data, callback, type ) {
+                if ( jQuery.isFunction( data ) ) {
+                    type = type || callback;
+                    callback = data;
+                    data = undefined;
+                }
+
+                return jQuery.ajax({
+                    url: url,
+                    type: method,
+                    dataType: type,
+                    data: data,
+                    success: callback
+                });
+            };
+        });
+
+        $('.delete-user').on("click", function (e) {
+            e.preventDefault();
+
+            if (confirm("Do you want to delete user?")) {
+                var id = parseInt($(this).closest("td").attr("id"));
+
+                $.ajax({
+                    url: '/users/' + id,
+                    type: 'DELETE',
+                    data: {id: id},
+                    success: function (data) {
+                        $(".delete-user").closest("td#" + data).parent("tr").fadeOut("slow", function () {
+                            $(".delete-user").closest("td#" + data).parent("tr").remove();
+                        });
+                    }
+                });
+            }
+        });
+    </script>
 </div>
 </body>
 </html>
