--- a/src/main/resources/templates/fragments/bootstrap.html
+++ b/src/main/resources/templates/fragments/bootstrap.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css">
     <script type="text/javascript" src="/webjars/jquery/3.1.1-1/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js" defer></script>
+    <script src="/js/bootbox.min.js" defer></script>
 </th:block>
 </head>
 </html>
