--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -118,8 +118,8 @@
                             </td>
                             <td>
                                 <p data-placement="top" data-toggle="tooltip" title="Delete">
-                                    <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
-                                            data-target="#delete"><span class="glyphicon glyphicon-trash"></span>
+                                    <button class="btn btn-danger btn-xs" data-title="Delete">
+                                        <span class="glyphicon glyphicon-trash"></span>
                                     </button>
                                 </p>
                             </td>
@@ -267,44 +267,77 @@
     <!-- ---------------------------          DELETE          ---------------------------------- -->
     <!-- --------------------------------------------------------------------------------------- -->
     <script type="application/javascript">
-        /* ============================================================ */
-        /* http://stepansuvorov.com/blog/2014/04/jquery-put-and-delete/ */
-        /* ============================================================ */
-        jQuery.each( [ "put", "delete" ], function( i, method ) {
-            jQuery[ method ] = function( url, data, callback, type ) {
-                if ( jQuery.isFunction( data ) ) {
-                    type = type || callback;
-                    callback = data;
-                    data = undefined;
-                }
+        $(document).ready(function () {
+            /* ============================================================ */
+            /* http://stepansuvorov.com/blog/2014/04/jquery-put-and-delete/ */
+            /* provide PUT/DELETE ability via jQuery                        */
+            /* ============================================================ */
+            jQuery.each(["put", "delete"], function (i, method) {
+                jQuery[method] = function (url, data, callback, type) {
+                    if (jQuery.isFunction(data)) {
+                        type = type || callback;
+                        callback = data;
+                        data = undefined;
+                    }
 
-                return jQuery.ajax({
-                    url: url,
-                    type: method,
-                    dataType: type,
-                    data: data,
-                    success: callback
-                });
-            };
-        });
+                    return jQuery.ajax({
+                        url: url,
+                        type: method,
+                        dataType: type,
+                        data: data,
+                        success: callback
+                    });
+                };
+            });
 
-        $('.delete-user').on("click", function (e) {
-            e.preventDefault();
+            $('.delete-user').on("click", function (e) {
+                e.preventDefault();
 
-            if (confirm("Do you want to delete user?")) {
                 var id = parseInt($(this).closest("td").attr("id"));
 
-                $.ajax({
-                    url: '/users/' + id,
-                    type: 'DELETE',
-                    data: {id: id},
-                    success: function (data) {
-                        $(".delete-user").closest("td#" + data).parent("tr").fadeOut("slow", function () {
-                            $(".delete-user").closest("td#" + data).parent("tr").remove();
-                        });
+                var currentRow = $(this).closest("tr");
+                var fname = currentRow.find("td:eq(0)").text(); // get current row 1st TD value
+                var lname = currentRow.find("td:eq(1)").text(); // get current row 2nd TD
+                var email = currentRow.find("td:eq(2)").text(); // get current row 3rd TD
+                var data = fname + " " + lname + " (" + email + ")";
+
+                bootbox.dialog({
+                    message: "Are you sure you want to delete user" + data + " ?",
+                    title: "<i class='glyphicon glyphicon-trash'></i> Delete !",
+                    buttons: {
+                        success: {
+                            label: "No",
+                            className: "btn-success",
+                            callback: function () {
+                                $('.bootbox').modal('hide');
+                            }
+                        },
+                        danger: {
+                            label: "Delete!",
+                            className: "btn-danger",
+                            callback: function () {
+
+                                $.ajax({
+                                    type: 'DELETE',
+                                    url: '/users/' + id,
+                                    data: {id: id},
+                                    success: function (data) {
+                                        $(".delete-user").closest("td#" + data).parent("tr").fadeOut("slow", function () {
+                                            $(".delete-user").closest("td#" + data).parent("tr").remove();
+                                        });
+                                    }
+                                })
+                                    .done(function (response) {
+                                        bootbox.alert('User has been deleted successfully...');
+                                    })
+                                    .fail(function () {
+                                        bootbox.alert('Oops... Something Went Wrong ....');
+                                    })
+                            }
+                        }
                     }
                 });
-            }
+            });
         });
     </script>
 </div>
